# sfdata-faker

./: LICENSE  README.md  pyproject.toml
providers/UPN/: README.md  __init__.py  upn.py
providers/UPN/en_GB/: __init__.py
providers/child/: README.md  __init__.py  child.py
providers/child/en_GB/: __init__.py
providers/child_id/: README.md  __init__.py
providers/ethnicity_code/: README.md  __init__.py  ethnicities.py
providers/ethnicity_code/en_GB/: __init__.py
providers/placement/: README.md  __init__.py  placement.py
providers/placement/en_GB/: __init__.py
tests/providers/: test_child.py  test_child_id.py  test_ethnicity_code.py  test_placement.py  test_upn.py
