[tool.poetry]
name = "sf-faker"
version = "0.1.0"
description = "Faker providers for SF Needs"
authors = ["Matthew Pugh <pughmds@cyram.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sf_faker"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^18.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
